force-app/main/default/objects/RSS_Feed_Entry__c/RSS_Feed_Entry__c.object-meta.xml
<CustomObject>
    <label>RSS Feed Entry</label>
    <nameField>
        <displayFormat>RFE-{000000}</displayFormat>
        <label>RSS Feed Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSS Feed Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>