force-app/main/default/objects/RSS_Feed_Entry__c/fields/Email_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Send_Status__c</fullName>
    <defaultValue>&apos;New&apos;</defaultValue>
    <label>Email Send Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>