force-app/main/default/objects/RSS_Feed_Entry__c/fields/Entry_GUID__c.field-meta.xml
<CustomField>
    <fullName>Entry_GUID__c</fullName>
    <externalId>true</externalId>
    <label>Entry GUID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>