force-app/main/default/objects/RSS_Feed_Entry__c/fields/Entry_Link__c.field-meta.xml
<CustomField>
    <fullName>Entry_Link__c</fullName>
    <label>Entry Link</label>
    <type>Url</type>
</CustomField>