force-app/main/default/objects/RSS_Feed_Entry__c/fields/Feed_Category__c.field-meta.xml
<CustomField>
    <fullName>Feed_Category__c</fullName>
    <label>Feed Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>