force-app/main/default/objects/RSS_Feed_Entry__c/fields/Feed_Entry_Description__c.field-meta.xml
<CustomField>
    <fullName>Feed_Entry_Description__c</fullName>
    <label>Feed Entry Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>