force-app/main/default/objects/RSS_Feed_Entry__c/fields/Feed_Entry_Title__c.field-meta.xml
<CustomField>
    <fullName>Feed_Entry_Title__c</fullName>
    <label>Feed Entry Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>