force-app/main/default/objects/RSS_Feed_Entry__c/fields/Publication_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date_Time__c</fullName>
    <label>Publication Date Time</label>
    <type>DateTime</type>
</CustomField>