force-app/main/default/objects/RSS_Feed_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Feed_Entry_Title__c</columns>
    <columns>Entry_GUID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>